--- a/requirements.yml
+++ b/requirements.yml
@@ -1,4 +1,6 @@
 ---
+roles:
+  - name: geerlingguy.dotfiles
 collections:
   - name: https://github.com/ansible-collections/community.general.git
     type: git
