fix: zshrc, dotfiles location

--- a/ansible_osx.yml
+++ b/ansible_osx.yml
@@ -1,85 +1,85 @@
 ---
 - hosts: localhost
   tasks:
-    # - name: Install homebrew
-    #   include_role:
-    #     name: geerlingguy.mac.homebrew
+    - name: Install homebrew
+      include_role:
+        name: geerlingguy.mac.homebrew
 
-    # - name: Make sure homebrew bin is in path
-    #   ansible.builtin.lineinfile:
-    #     path: /etc/paths
-    #     state: present
-    #     line: '/opt/homebrew/bin'
-    #   become: true
-    #   become_user: root
+    - name: Make sure homebrew bin is in path
+      ansible.builtin.lineinfile:
+        path: /etc/paths
+        state: present
+        line: '/opt/homebrew/bin'
+      become: true
+      become_user: root
 
-    # - name: 'add custom homebrew repos'
-    #   community.general.homebrew_tap:
-    #     name: [
-    #       heroku/brew
-    #     ]
+    - name: 'add custom homebrew repos'
+      community.general.homebrew_tap:
+        name: [
+          heroku/brew
+        ]
 
-    # - name: Install core packages via brew casks
-    #   community.general.homebrew_cask:
-    #     name: "{{ item }}"
-    #   ignore_errors: yes
-    #   with_items:
-    #     - docker
-    #     - drawio
-    #     - google-chrome
-    #     - visual-studio-code
-    #     - vlc
-    #     - microsoft-teams
-    #     - slack
+    - name: Install core packages via brew casks
+      community.general.homebrew_cask:
+        name: "{{ item }}"
+      ignore_errors: yes
+      with_items:
+        - docker
+        - drawio
+        - google-chrome
+        - visual-studio-code
+        - vlc
+        - microsoft-teams
+        - slack
 
-    # - name: "Install homebrew packages"
-    #   community.general.homebrew:
-    #     name: [
-    #       'bfg',
-    #       'pkgconfig',
-    #       'zlib',
-    #       'curl',
-    #       'direnv',
-    #       'gnu-time',
-    #       'gpg',
-    #       'heroku',
-    #       'htop',
-    #       'kubectx',
-    #       'kubernetes-cli',
-    #       'kubernetes-helm',
-    #       'kubeseal',
-    #       'openssl' ,
-    #       'postgresql',
-    #       'zsh',
-    #       'youtube-dl',
-    #       'tree',
-    #       'doppler',
-    #       'yq',
-    #       'jq',
-    #       'yamllint'
-    #     ]
-    #     state: present
-    #     update_homebrew: yes
+    - name: "Install homebrew packages"
+      community.general.homebrew:
+        name: [
+          'bfg',
+          'pkgconfig',
+          'zlib',
+          'curl',
+          'direnv',
+          'gnu-time',
+          'gpg',
+          'heroku',
+          'htop',
+          'kubectx',
+          'kubernetes-cli',
+          'kubernetes-helm',
+          'kubeseal',
+          'openssl' ,
+          'postgresql',
+          'zsh',
+          'youtube-dl',
+          'tree',
+          'doppler',
+          'yq',
+          'jq',
+          'yamllint'
+        ]
+        state: present
+        update_homebrew: yes
 
-    # - name: Get the path to ZSH
-    #   become: false
-    #   local_action: command which zsh
-    #   register: zsh_path
+    - name: Get the path to ZSH
+      become: false
+      local_action: command which zsh
+      register: zsh_path
 
-    # - name: "Ensure homebrew zsh is in allowed shells"
-    #   lineinfile:
-    #     path: /etc/shells
-    #     line: "{{ zsh_path.stdout }}"
-    #   become: true
+    - name: "Ensure homebrew zsh is in allowed shells"
+      lineinfile:
+        path: /etc/shells
+        line: "{{ zsh_path.stdout }}"
+      become: true
 
-    # - name: Install Oh My ZSH
-    #   shell: sh -c "$(curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
-    #   args:
-    #     creates: "/Users/{{ lookup('env', 'USER') }}/.oh-my-zsh"
+    - name: Install Oh My ZSH
+      shell: sh -c "$(curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
+      args:
+        creates: "/Users/{{ lookup('env', 'USER') }}/.oh-my-zsh"
 
-    # - name: Set ZSH as the default shell
-    #   shell: chsh -s $(which zsh) {{ lookup('env', 'USER') }}
-    #   become: true
+    - name: Set ZSH as the default shell
+      shell: chsh -s $(which zsh) {{ lookup('env', 'USER') }}
+      become: true
 
     - name: "Create a default ZSH configuration"
       template:
@@ -94,6 +94,7 @@
       vars:
         dotfiles_repo: "https://github.com/altitudems/dotfiles.git"
         dotfiles_repo_version: main
+        dotfiles_repo_local_destination: "~/code/personal/dotfiles"
         dotfiles_files:
         - .osx
         - .zshrc.personal.after
